tests/sema/fail/v5_fail_struct_uninitialized.ep
# COMPILE_FAIL: requires an initializer
struct Box {
    value: i64
}

fun main(): void {
    let b: Box
}
